--- a/trading_bot/config/spot_config.yaml
+++ b/trading_bot/config/spot_config.yaml
@@ -33,10 +33,9 @@ strategy:
     long_period: 50
 
 # Risk management
+# Position sizing is automatically calculated using equal division based on total number of trading pairs
 risk:
-  max_open_trades: 1
-  risk_per_trade: 0.5  # 1% of portfolio per trade - conservative for testing
-  stop_loss_pct: 0.05   # 5% stop loss
+  max_open_trades: 5  # Should match the number of trading pairs
 
 # System settings
 system:
